Fix: dropdown alignmnet

--- a/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
+++ b/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
@@ -1786,7 +1786,6 @@ hr {
 }
 .roledropdownicon{
   position: relative;
-    top: 3px;
     float: right;
 }
 .mat-menu-item:hover:not([disabled]) {
